# vdf-bench

./: Cargo.toml
benches/: square_t_times_vs_power_of_power.rs
docs/report/: index.html
docs/timelock/1000/report/: index.html
docs/timelock/10000/report/: index.html
docs/timelock/100000/report/: index.html
docs/timelock/120000/report/: index.html
docs/timelock/2000/report/: index.html
docs/timelock/20000/report/: index.html
docs/timelock/40000/report/: index.html
docs/timelock/5000/report/: index.html
docs/timelock/60000/report/: index.html
docs/timelock/80000/report/: index.html
docs/timelock/power of power/1000/base/: benchmark.json  raw.csv  tukey.json
docs/timelock/power of power/1000/new/: estimates.json  sample.json
docs/timelock/power of power/1000/report/: index.html
docs/timelock/power of power/10000/base/: benchmark.json  raw.csv  sample.json
docs/timelock/power of power/10000/new/: estimates.json  tukey.json
docs/timelock/power of power/10000/report/: index.html
docs/timelock/power of power/100000/base/: benchmark.json  sample.json  tukey.json
docs/timelock/power of power/100000/new/: estimates.json  raw.csv
docs/timelock/power of power/100000/report/: index.html
docs/timelock/power of power/120000/base/: estimates.json  raw.csv  sample.json
docs/timelock/power of power/120000/new/: benchmark.json  tukey.json
docs/timelock/power of power/120000/report/: index.html
docs/timelock/power of power/report/: index.html
docs/timelock/report/: index.html
docs/timelock/square t times/report/: index.html
(+97 files in other folders)
