[package]
name = "timelock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rug = "1.16.0"

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name = "square_t_times_vs_power_of_power"
harness = false
